--- a/instsetoo_native/util/openoffice.lst.in
+++ b/instsetoo_native/util/openoffice.lst.in
@@ -105,7 +105,7 @@ LibreOfficeDev
             BASISPACKAGEPREFIX lodevbasis
             UREPACKAGEPREFIX libreofficedev
             SOLSUREPACKAGEPREFIX libreofficedev
-            REGISTRYLAYERNAME LayerDev
+            REGISTRYLAYERNAME LayerDoCAN
             UPDATEURL http://update.libreoffice.org/check.php
             ADD_INCLUDE_FILES cli_ure/version/version.txt,unoil/climaker/version.txt
             ADDSYSTEMINTEGRATION 1
@@ -220,3 +220,102 @@ LibreOfficeDev_SDK
         include {installscriptdir},{filelistpath}/PackageSet,{filelistpath}/GeneratedPackage,{filelistpath}/Package,{licensepath},{packinfopath}
     }
 }
+
+LibreOfficeDoCAN
+{
+    Settings
+    {
+        variables
+        {
+            PRODUCTNAME LibreOffice DoCAN
+            PRODUCTVERSION @LIBO_VERSION_MAJOR@.@LIBO_VERSION_MINOR@
+            PRODUCTEXTENSION .@LIBO_VERSION_MICRO@.@LIBO_VERSION_PATCH@@LIBO_VERSION_SUFFIX@
+            WINDOWSBASISROOTNAME LibreOffice DoCAN @LIBO_VERSION_MAJOR@
+            UNIXBASISROOTNAME libreofficedocan@LIBO_VERSION_MAJOR@.@LIBO_VERSION_MINOR@
+            POSTVERSIONEXTENSION
+            BUNDLEIDENTIFIER @MACOSX_BUNDLE_IDENTIFIER@
+            BRANDPACKAGEVERSION @LIBO_VERSION_MAJOR@.@LIBO_VERSION_MINOR@
+            USERDIRPRODUCTVERSION 4
+            ABOUTBOXPRODUCTVERSION @LIBO_VERSION_MAJOR@.@LIBO_VERSION_MINOR@.@LIBO_VERSION_MICRO@.@LIBO_VERSION_PATCH@@LIBO_VERSION_SUFFIX@
+            ABOUTBOXPRODUCTVERSIONSUFFIX @LIBO_VERSION_SUFFIX_SUFFIX@
+            BASEPRODUCTVERSION @LIBO_VERSION_MAJOR@.@LIBO_VERSION_MINOR@
+            DEVELOPMENTPRODUCT 1
+            BASISPACKAGEPREFIX lodevbasis
+            UREPACKAGEPREFIX libreofficedocan
+            SOLSUREPACKAGEPREFIX libreofficedocan
+            REGISTRYLAYERNAME LayerDev
+            UPDATEURL http://update.libreoffice.org/check.php
+            ADD_INCLUDE_FILES cli_ure/version/version.txt,unoil/climaker/version.txt
+            ADDSYSTEMINTEGRATION 1
+            PACKAGEVERSION @LIBO_VERSION_MAJOR@.@LIBO_VERSION_MINOR@.@LIBO_VERSION_MICRO@.@LIBO_VERSION_PATCH@@LIBO_VERSION_SUFFIX@
+            PACKAGEREVISION {buildid}
+            LICENSENAME LGPL
+            ROOTMODULEGID gid_Module_Root
+            GLOBALPATCHFILEGID gid_File_Txt_Patchfiles
+            SPELLCHECKERFILE spellchecker_selection.txt
+            OOODOWNLOADNAME 1
+            CHANGETARGETDIR 1
+            PATCHCODEFILE ooodocan_patchcodes.txt
+            LOCALUSERDIR $ORIGIN/..
+            STARTCENTER_ADDFEATURE_URL http://extensions.libreoffice.org/
+            STARTCENTER_INFO_URL https://www.libreoffice.org/
+            STARTCENTER_TEMPLREP_URL http://templates.libreoffice.org/
+            DICT_REPO_URL http://extensions.libreoffice.org/dictionaries/
+            STARTCENTER_HIDE_EXTERNAL_LINKS 0
+        }
+        active          1
+        compression     5
+        script          setup_osl
+        downloadname    LibreOfficeDoCAN_{productversion}_{os}_install_{languages}
+        langpackdownloadname    LibreOfficeDoCAN_{productversion}_languagepack_{os}_install_{languages}
+        helppackdownloadname    LibreOfficeDoCAN_{productversion}_helppack_{os}_install_{languages}
+        include         {installscriptdir},{customtargetpath}/readlicense_oo/readme,{customtargetpath}/sysui/{pkgtype},{customtargetpath}/setup_native,{filelistpath}/PackageSet,{filelistpath}/GeneratedPackage,{filelistpath}/Package,{filelistpath}/ExtensionPackage,{extensionsdir},{licensepath},{packinfopath}
+    }
+}
+
+LibreOfficeDoCAN_SDK
+{
+    Settings
+    {
+        downloadname LibreOfficeDoCAN-SDK_{packageversion}_{os}_install_{languages}
+        variables
+        {
+            PRODUCTNAME LibreOfficeDoCAN
+            PRODUCTVERSION @LIBO_VERSION_MAJOR@.@LIBO_VERSION_MINOR@
+            PRODUCTEXTENSION .@LIBO_VERSION_MICRO@.@LIBO_VERSION_PATCH@@LIBO_VERSION_SUFFIX@
+            WINDOWSBASISROOTNAME LibreOfficeDev @LIBO_VERSION_MAJOR@
+            UNIXBASISROOTNAME libreofficedev@LIBO_VERSION_MAJOR@.@LIBO_VERSION_MINOR@
+            POSTVERSIONEXTENSION SDK
+            BUNDLEIDENTIFIER @MACOSX_BUNDLE_IDENTIFIER@.SDK
+            BRANDPACKAGEVERSION @LIBO_VERSION_MAJOR@.@LIBO_VERSION_MINOR@
+            PACKAGEVERSION @LIBO_VERSION_MAJOR@.@LIBO_VERSION_MINOR@.@LIBO_VERSION_MICRO@.@LIBO_VERSION_PATCH@@LIBO_VERSION_SUFFIX@
+            PACKAGEREVISION {buildid}
+            BASISPACKAGEPREFIX lodevbasis
+            UREPACKAGEPREFIX libreofficedev
+            SOLSUREPACKAGEPREFIX libreofficedev
+            REGISTRYLAYERNAME LayerDev
+            DEVELOPMENTPRODUCT 1
+            PACK_INSTALLED 1
+            DMG_VOLUMEEXTENSION SDK
+            DATABASENAME libreoffice40docansdk
+            NO_README_IN_ROOTDIR 1
+            LICENSENAME LGPL
+            IGNOREDIRECTORYLAYER 1
+            NOVERSIONINDIRNAME 0
+            NOSPACEINDIRECTORYNAME 1
+            NOSHORTDIRECTORYNAMES 1
+            CHANGETARGETDIR 1
+            DONTUSESTARTMENUFOLDER 1
+            STARTCENTER_ADDFEATURE_URL http://extensions.libreoffice.org/
+            STARTCENTER_INFO_URL https://www.libreoffice.org/
+            STARTCENTER_TEMPLREP_URL http://templates.libreoffice.org/
+            DICT_REPO_URL http://extensions.libreoffice.org/dictionaries/
+            STARTCENTER_HIDE_EXTERNAL_LINKS 0
+        }
+        active 1
+        compression 5
+        script sdkoo
+        include {installscriptdir},{filelistpath}/PackageSet,{filelistpath}/GeneratedPackage,{filelistpath}/Package,{licensepath},{packinfopath}
+    }
+}
+
