change code file for release build
Change-Id: I0a74260b122ef5bb760b21cbb9a8a00ac2c1ec53

--- a/instsetoo_native/util/openoffice.lst.in
+++ b/instsetoo_native/util/openoffice.lst.in
@@ -256,6 +256,7 @@ LibreOfficeDoCAN
             OOODOWNLOADNAME 1
             CHANGETARGETDIR 1
             PATCHCODEFILE ooodocan_patchcodes.txt
+            CODEFILENAME codes_ooodev.txt
             LOCALUSERDIR $ORIGIN/..
             STARTCENTER_ADDFEATURE_URL http://extensions.libreoffice.org/
             STARTCENTER_INFO_URL https://www.libreoffice.org/
